compilateurDeca/src/test/deca/syntax/valid/objet/classe_minimale.deca
// Description:
//    Programme minimal avec une classe vide et un programme principal vide.
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 13/01/2026

class A {
}

{
}